--- a/_config.yml
+++ b/_config.yml
@@ -19,10 +19,9 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Charalampos Kardaris
-email: ckardaris@outlook.com
+email: ckardaris [at] outlook [dot] com
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "ckardaris.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: ckardaris
 github_username:  ckardaris
 linkedin_username: ckardaris
 
