--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Charalampos Kardaris
 email: ckardaris [at] outlook [dot] com
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "ckardaris.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://ckardaris.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  ckardaris
 linkedin_username: ckardaris
 
