Create photo page
- Add generator to create page for each photo
- Add controls to move to previous/next photo
- Maintain consistency across whole site

--- a/_data/photos.yml
+++ b/_data/photos.yml
@@ -1,53 +1,53 @@
-- name: birth_of_an_artist.jpg
+- name: birth_of_an_artist
   caption: Birth of an artist
 
-- name: city_circles.jpg
+- name: city_circles
   caption: City circles
 
-- name: the_tunnel.jpg
+- name: the_tunnel
   caption: The tunnel
 
-- name: nature_taking_over.jpg
+- name: nature_taking_over
   caption: Nature taking over
 
-- name: strolling_around.jpg
+- name: strolling_around
   caption: Strolling around
 
-- name: reality_game.jpg
+- name: reality_game
   caption: Glitch in the matrix
 
-- name: squares.jpg
+- name: squares
   caption: Squares
 
-- name: where_are_you_going.jpg
+- name: where_are_you_going
   caption: Hey, boy, up here!
 
-- name: fruta_carne.jpg
+- name: fruta_carne
   caption: Fruta vs jamón
 
-- name: city_is_moving.jpg
+- name: city_is_moving
   caption: Barcelona moving
 
-- name: good_morning.jpg
+- name: good_morning
   caption: Good morning
 
-- name: desert_rock.jpg
+- name: desert_rock
   caption: Desert rock
 
-- name: getting_ready.jpg
+- name: getting_ready
   caption: Turban ready
 
-- name: follow_the_shadows.jpg
+- name: follow_the_shadows
   caption: Shadows of desert life
 
-- name: by_the_ocean.jpg
+- name: by_the_ocean
   caption: By the ocean
 
-- name: locking_love.jpg
+- name: locking_love
   caption: Lock your love
 
-- name: stairway_to_nowhere.jpg
+- name: stairway_to_nowhere
   caption: Stairway to Nowhere
 
-- name: biking_around.jpg
+- name: biking_around
   caption: Biking around
