--- a/_data/photos.yml
+++ b/_data/photos.yml
@@ -13,7 +13,7 @@
 - name: strolling_around
   caption: Strolling around
 
-- name: reality_game
+- name: glitch_in_the_matrix
   caption: Glitch in the matrix
 
 - name: squares
