--- a/_config.yml
+++ b/_config.yml
@@ -76,3 +76,6 @@ exclude:
 
 tag_page_layout: tag_page
 tag_page_dir: blog/tags
+# This makes sure that the "Blog" button is bold in the header.
+tag_page_data:
+  nav: "Blog"
