--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Charalampos Kardaris
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://ckardaris.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-mailto: "ckardaris.github.io@outlook.com"
+mailto: "ckardaris.github.io@gmail.com"
 pgp: pgp-public-key.txt
 socials:
   - url: mailto:ckardaris@outlook.com
