[Post] 2026.02.07 - The P in PGP isn’t for pain: encrypting emails in the browser

--- a/_scripts/data/post_id_map.yml
+++ b/_scripts/data/post_id_map.yml
@@ -20,3 +20,6 @@
 "/blog/2026/01/22/my-comments-run-on-email":
   title: My comments run on email
   date: 2026-01-22 00:00:00.000000000 +00:00
+"/blog/2026/02/07/encrypted-email":
+  title: 'The P in PGP isn’t for pain: encrypting emails in the browser'
+  date: 2026-02-07 00:00:00.000000000 +00:00
